--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "homepage": "https://backsty.github.io/Chaos-Organizer-diploma/",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
